# LatticeCast

./: .env.example  .gitignore  .gitmodules  CHANGELOG.md  CLAUDE.md  DESIGN.md  LICENSE  README.md  TODO.md  docker-compose.yml  llm.arch.airtable.md  llm.arch.auth.md  llm.arch.dashboard.md  llm.arch.db.md  llm.arch.pm.md  llm.deploy.md  llm.dev.md  llm.e2e.md  llm.endpoint.md  llm.frontend.md  llm.root.md  llm.snapshot.md  llm.storage.md  llm.user.md
backend/: .gitignore  Dockerfile  pyproject.toml  recover_db.py  supervisord.conf
backend/src/: ServerTee.py  main.py
backend/tests/: conftest.py  e2e_auth_test.py  e2e_storage_test.py  run_all_tests.py  test_dashboard.py  test_lattice_ql.py  test_session_refresh_attached.py  test_table_view_repo.py  test_update_email.py
e2e/: Dockerfile  conftest.py  e2e_base.py  pyproject.toml
e2e/auth/: test_admin_create_user.py  test_admin_only.py  test_me_config_darkmode.py  test_me_email_change.py
e2e/table_views/: test_kanban_add_row.py  test_kanban_card_fields.py  test_kanban_drag_card.py  test_kanban_groupby.py  test_timeline_color_by.py  test_timeline_granularity.py  test_timeline_groupby.py  test_views_create.py  test_views_default.py  test_views_delete.py  test_views_order.py  test_views_rename.py  test_workflow_nodes.py
e2e/tables/: test_col_order.py  test_col_resize.py  test_column_add.py  test_column_checkbox_type.py  test_column_delete.py  test_column_doc_type.py  test_column_option_add_remove.py  test_column_option_colors.py  test_column_rename.py  test_column_tags_type.py  test_column_url_type.py  test_filter.py  (+9 more)
(+420 files in other folders)
