[project]
name = "lattice-cast-backend"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "fastapi",
    "uvicorn",
    "httpx",
    "python-multipart",
    "pydantic[email]",
    "pydantic-settings",
    "sqlmodel",          # pulls sqlalchemy + pydantic
    "asyncpg",
    "python-jose",
    "passlib",
    "redis[hiredis]",
    "aioboto3",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "ruff",
]

[tool.ruff]
target-version = "py312"
line-length = 120

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
]
ignore = [
    "E501", # line too long (handled by formatter)
    "B008", # Depends() in default args is standard FastAPI pattern
]

[tool.ruff.format]
quote-style = "double"
