[project]
name = "e2e"
version = "0.44.0"
description = "LatticeCast e2e — Playwright drives UI (browsers in separate `browser` container, connected via WS); requests for BE API + DB content."
requires-python = ">=3.12"
dependencies = [
    "playwright==1.50.0",
    "pytest>=8.0",
    "requests",
]

[tool.pytest.ini_options]
testpaths = ["."]
python_files = ["test_*.py"]
python_functions = ["test_*"]
